# agent-hub

./: .env.example  .env.prod.example  .gitignore  DEPLOYMENT.md  README.md  Research.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  restart_chart_server.sh
.github/workflows/: ci-cd.yml
agent-hub/: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  angular.json  package-lock.json  package.json  tsconfig.json
agent-hub-api/: .env.example  .gitignore  Dockerfile  README.md  create_admin.py  pyproject.toml  test_activity_logging.py  test_activity_logging_docs.py  test_activity_logging_simple.py  test_file_creation.py  test_file_id.py  test_file_model.py  test_file_service.py  test_simple_file.py
agent-hub-api/.github/workflows/: docker-image.yml  gitleaks-scan.yml
agent-hub-api/app/: agent_loader.py  llm_factory.py  main.py
agent-hub-api/app/agents/: agent_builders.py  agent_manager.py  tool_utils.py
agent-hub-api/app/auth/: dependencies.py  github_oauth.py  security.py
agent-hub-api/app/callbacks/: tool_logger.py
agent-hub-api/app/config/: settings.py
agent-hub-api/app/database/: connection.py  init_db.py  models.py  populate_db.py
agent-hub-api/app/models/: agent_schemas.py  analytics.py  chat.py  file.py  schemas.py
agent-hub-api/app/prompts/: efficient_prompt.py  react_prompt.py  speed_prompts.py  system_prompts.py  user_prompts.py
agent-hub-api/app/routers/: admin.py  agents.py  analytics.py  auth.py  chat.py  files.py  marketplace.py
agent-hub-api/app/services/: activity_log_service.py  agent_sync_service.py  analytics_service.py  auth_service.py  chat_service.py  file_service.py
agent-hub-api/app/utils/: activity_logger.py  agent_optimizer.py  agent_utils.py  circuit_breaker.py  demo_simulator.py  logging.py  pdf_processor.py  rate_limit_handler.py  speed_optimizer.py
agent-hub/.github/: dependabot.yml  gitleaks.toml
agent-hub/.github/workflows/: docker-image.yml  gitleaks-scan.yml
agent-hub/src/: index.html  styles.scss
agent-hub/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  route-prefixes.ts
agent-hub/src/app/admin/: admin.component.html  admin.component.scss  admin.component.ts  admin.routes.d.ts  admin.routes.ts  index.ts
agent-hub/src/app/admin/activity/: activity-logs.component.html  activity-logs.component.scss  activity-logs.component.ts  index.ts
agent-hub/src/app/admin/agents/: admin-agents.component.html  admin-agents.component.scss  admin-agents.component.ts
agent-hub/src/app/admin/analytics/: analytics-dashboard.component.html  analytics-dashboard.component.scss  analytics-dashboard.component.ts  icons.component.ts
agent-hub/src/app/admin/overview/: admin-overview.component.html  admin-overview.component.scss  admin-overview.component.ts  request-management.component.html  request-management.component.scss  request-management.component.ts
agent-hub/src/app/admin/services/: admin.service.ts  analytics.service.ts
agent-hub/src/app/admin/system/: admin-system.component.html  admin-system.component.scss  admin-system.component.ts
agent-hub/src/app/admin/users/: admin-users.component.html  admin-users.component.scss  admin-users.component.ts
agent-hub/src/app/admin/view-chats/: admin-view-chats.component.html  admin-view-chats.component.scss  admin-view-chats.component.ts
agent-hub/src/app/api/: chatbot-api.service.spec.ts  chatbot-api.service.ts  marketplace-api.service.ts
agent-hub/src/app/api/utils/: api-types.ts  mappers.ts
agent-hub/src/app/chat/: chat.component.html  chat.component.scss  chat.component.spec.ts  chat.component.ts
agent-hub/src/app/components/login/: login.component.html  login.component.scss  login.component.ts
agent-hub/src/app/components/oauth-callback/: oauth-callback.component.ts
agent-hub/src/app/data-access/: access-request.service.ts  agent.service.ts  chatbot.service.spec.ts  chatbot.service.ts  navigation.service.ts
agent-hub/src/app/directives/: click-outside.directive.ts
agent-hub/src/app/guards/: admin.guard.ts  auth.guard.ts
agent-hub/src/app/interceptors/: auth.interceptor.ts
agent-hub/src/app/marketplace/: marketplace.component.html  marketplace.component.scss  marketplace.component.ts
agent-hub/src/app/services/: access-request-api.service.ts  auth.service.ts  file.service.ts  markdown.service.ts  marketplace.service.ts  multi-agent-query.service.ts  sidebar-state.service.ts
agent-hub/src/environments/: environment.prod.ts  environment.ts
agent-hub/src/model/: access-request.ts  index.ts  query.ts
mcp-tools-server/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  config.py  main.py  pyproject.toml
mcp-tools-server/.github/workflows/: docker-image.yml
mcp-tools-server/auth/: token_generator.py
mcp-tools-server/auth/keys/: public.pem
mcp-tools-server/shared/utils/: logging.py
mcp-tools-server/tools/github/: server.py
mcp-tools-server/tools/github/services/: github_service.py
mcp-tools-server/tools/github/utils/: logging.py
mcp-tools-server/tools/pdf/: lightweight_rag.py  processors.py  server.py  utils.py
mcp-tools-server/tools/sample/: README.md  server.py
mcp-tools-server/tools/sample/utils/: logging.py
mcp-tools-server/tools/security/: dns_analyzer.py  header_analyzer.py  report_generator.py  safe_scanner.py  server.py  ssl_analyzer.py
mcp-tools-server/tools/snyk_scanner/: server.py  test_integration.py  usage_examples.py
mcp-tools-server/tools/snyk_scanner/services/: snyk_service.py
mcp-tools-server/tools/snyk_scanner/utils/: output_formatter.py  path_validator.py  quick_scanner.py  streaming_formatter.py
mcp-tools-server/tools/web_scraper/: server.py
mcp-tools-server/tools/web_scraper/services/: web_scraper_service.py
mcp-tools-server/tools/web_scraper/utils/: html_parser.py  url_validator.py
(+58 files in other folders)
